Edited onclick function

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
       <div class="row">
         <ul class="list-group col-lg-6" id='sector'>
-            <li class="list-group-item item">Lindor Chocolates</li>
-            <li class="list-group-item item">Hersey's</li>
-            <li class="list-group-item item">Chicken Wings</li>
-            <li class="list-group-item item">Pork Ribs</li>
-            <li class="list-group-item item">Galaxy Fold</li>
-            <li class="list-group-item item">Omen i7</li>
+            <li class="list-group-item item" data-catagory="Sweets" data-price="$1.99">Lindor Chocolates</li>
+            <li class="list-group-item item" data-catagory="Sweets" data-price="$0.99">Hersey's</li>
+            <li class="list-group-item item" data-catagory="Meats" data-price="$6.78">Chicken Wings</li>
+            <li class="list-group-item item" data-catagory="Meats" data-price="$8.76">Pork Ribs</li>
+            <li class="list-group-item item" data-catagory="Electronics" data-price="$1,945">Galaxy Fold</li>
+            <li class="list-group-item item" data-catagory="Electronics" data-price="$1,299">Omen i7</li>
         </ul>
         <table class="table col-lg-6">
             <thead>
